yaml/Nginx_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m" 
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/etc/nginx/"
          name: nginx-conf
          readOnly: true
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
