yaml/flask_deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: was
spec:
  replicas: 3
  selector:
    matchLabels:
      app: was
  template:
    metadata:
      labels:
        app: was
    spec:
      containers:
      - name: was
        image: sook22002/mirror:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
