yaml/Mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  externalName: rds.t-seonghun.net
  ports:
    - port: 3306
      targetPort: 3306
